waybar/style.css
@import "mocha.css";
* {
    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
    font-size: 16px;
}

window#waybar {
    background-color: transparent;
    transition-property: background-color;
    transition-duration: .5s;
}

button {
    border-radius: 1em;
    margin: 0.2em 0.2em;
    padding: 0.2em 0.5em;
}

button:hover {
    box-shadow: inset 0 -3px @blue;
}
#workspaces button{
    border:3px solid @teal;
    color:@text;
    background-color: @surface1;
}

#workspaces button:hover {
    background: rgba(0, 0, 0, 0.2);
}

#workspaces button.active {
    background-color: @sky;
    transition-property: background-color;
    transition-duration: 1s;
    padding: 0.2em 1em;
    color: @crust; 
    box-shadow: inset 0 -3px @crust; 
}


#clock,
#battery,
#backlight,
#network,
#pulseaudio,
#wireplumber,
#bluetooth,
#custom-media,
#tray,
#mode,
#idle_inhibitor,
#scratchpad,
#power-profiles-daemon,
#mpd,
#cpu,
#memory,
#temperature,
#disk,
#power-profiles-daemon.performance,
#power-profiles-daemon.balanced,
#power-profiles-daemon.power-saver {
    padding:0 0.9em;
    margin: 0.3em 0.1em;
    color: @text;
    background-color: @surface1;
    border-radius:0.5em;
}

#idle_inhibitor:hover,
#network:hover,
#pulseaudio:hover,
#bluetooth:hover,
#power-profiles-daemon.performance:hover,
#power-profiles-daemon.balanced:hover,
#power-profiles-daemon.power-saver:hover {
    background-color: @crust;
}


/* If workspaces is the leftmost module, omit left margin */
.modules-left > widget:first-child > #workspaces {
    margin-left: 0;
}

/* If workspaces is the rightmost module, omit right margin */
.modules-right > widget:last-child > #workspaces {
    margin-right: 0;
}

#cpu {
    border:3px solid @mauve;    
}

#memory {
    border:3px solid @green;
}

#temperature {
    border:3px solid @red;
    margin-right: 3em;
}

#temperature.critical {
    background-color: @red;
}

#disk {
}
#clock {
    border: 3px solid @lavender;
}

#pulseaudio {
    border:3px solid @yellow
}


#pulseaudio.muted {
    color: @subtext1;
    border:@subtext1
}

#bluetooth {
    border:3px solid @text; 
}

#bluetooth.connected {
    border:3px solid @blue; 
}

#network {
    border:3px solid @flamingo;
}


#network.disconnected {
    border:3px solid @text;
}

#power-profiles-daemon.performance {
    border:3px solid @red;    
}

#power-profiles-daemon.balanced {
     border:3px solid @blue;
    
}

#power-profiles-daemon.power-saver {
     border:3px solid @green;
}

#backlight {
    border:3px solid @text;
}

#battery {
    border:3px solid @green;
}

#battery.charging, #battery.plugged {
    color:@crust;
    background-color: @green;
}

@keyframes blink {
    to {
        background-color: #ffffff;
        color: #000000;
    }
}

#battery.critical:not(.charging) {
    background-color: #f53c3c;
    color: #ffffff;
    animation-name: blink;
    animation-duration: 0.5s;
    animation-timing-function: steps(12);
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

#custom-media {
    background-color: #66cc99;
    color: #2a5c45;
    min-width: 100px;
}

#custom-media.custom-spotify {
    background-color: #66cc99;
}

#custom-media.custom-vlc {
    background-color: #ffa000;
}

#tray {
    background-color:@overlay1;
}

#tray > .passive {
    -gtk-icon-effect: dim;
}

#tray > .needs-attention {
    -gtk-icon-effect: highlight;
    background-color: #eb4d4b;
}

#idle_inhibitor {
    border:3px solid @sky;
}

#idle_inhibitor.activated {
    border:3px solid @red;
}

#custom-media {
    background-color: #66cc99;
    color: #2a5c45;
    min-width: 100px;
}

#custom-media.custom-spotify {
    background-color: #66cc99;
}

#custom-media.custom-vlc {
    background-color: #ffa000;
}

